--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id="wrapper">
-    <h1 class="name">Yourfirst Andlastname</h1>
-    <h2 class="title">Position at the Company</h2>
+    <h1 class="name">BetI Messele</h1>
+    <h2 class="title">Web Developer</h2>
     <div class="line-break"></div>
 
     <p><span class="phone-number">(888) 555-3242</span> • 1234 Streetname St. • <a class="email"
